Testing, Normalizing and better project structure
