# docs/swagger.json
@@ -87,7 +87,18 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Post a new message"
+                "summary": "Post a new message",
+                "parameters": [
+                    {
+                        "description": "Message",
+                        "name": "message",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.Message"
+                        }
+                    }
+                ]
             }
         },
         "/message/{uuid}": {
@@ -164,10 +175,6 @@
                 "message": {
                     "type": "string"
                 },
-                "name": {
-                    "description": "Stored and given by user",
-                    "type": "string"
-                },
                 "pod": {
                     "description": "Not saved in db but tell where it is sent from so remains in JSON",
                     "type": "string"
@@ -176,8 +183,12 @@
                     "description": "Encoded in URL-safe Base64",
                     "type": "string"
                 },
-                "signatureBase64": {
+                "signature": {
                     "description": "Encoded in URL-safe Base64",
+                    "type": "string"
+                },
+                "title": {
+                    "description": "Stored and given by user",
                     "type": "string"
                 }
             }
