# model/check.go
@@ -10,34 +10,46 @@ import (
 	"github.com/microcosm-cc/bluemonday"
 )
 
-// Normalizes, verifies integrity and optionally verifies the message signature
-func (message *Message) Normalize(verifySignature bool) error {
-	message.DisplayedName = strings.TrimSpace(message.DisplayedName)
-	message.AuthorBase64 = strings.TrimSpace(message.AuthorBase64)
-	message.Content = strings.TrimSpace(message.Content)
-	message.SignatureBase64 = strings.TrimSpace(message.SignatureBase64)
-	message.MessageID = strings.TrimSpace(message.MessageID)
-
-	return message.verifyConstraints(verifySignature)
+// Verify that the message is sanitized and has a valid signature
+func (message Message) Verify() error {
+	if err := message.verifyConstraints(); err != nil {
+		return err
+	} else if !message.isSanitized() {
+		return exceptions.ErrorContentWithHTML
+	} else if !message.verifyOwnerShip() {
+		return exceptions.ErrorWrongSignature
+	}
+	return nil
 }
 
-func (message *Message) EscapesHTML() {
-	message.Content = bluemonday.UGCPolicy().Sanitize(message.Content)
-	message.DisplayedName = bluemonday.StrictPolicy().Sanitize(message.DisplayedName)
+func (message Message) isSanitized() bool {
+	if !isEscaped(message.DisplayedName) || !isEscaped(message.Content) {
+		return false
+	}
+	policy := bluemonday.StrictPolicy()
+	if message.Content != policy.Sanitize(message.Content) {
+		return false
+	}
+	if message.DisplayedName != policy.Sanitize(message.DisplayedName) {
+		return false
+	}
+	return true
+}
+
+func isEscaped(s string) bool {
+	return !strings.ContainsAny(s, "<>\"'")
 }
 
 // VerifyConstraints returns an error.
 // Checks that the messages constraints are inherently met
 // -independently from the database & server.
-func (message Message) verifyConstraints(verifySignature bool) error {
+func (message Message) verifyConstraints() error {
 	if len(message.Content) > 50000 || len(message.DisplayedName) > 50 {
 		return exceptions.ErrorFieldsTooLong
 	} else if len(message.Content) < 140 {
 		return exceptions.ErrorContentTooShort
-	} else if _, err := uuid.Parse(message.ID); err != nil {
+	} else if _, err := uuid.Parse(message.ID); message.ID != "" && err != nil {
 		return err
-	} else if verifySignature && !message.verifyOwnerShip() {
-		return exceptions.ErrorWrongSignature
 	}
 	return nil
 }
